SocialDev/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  namespace: socialdev
  labels:
    app.kubernetes.io/name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: ghcr.io/omer-bar/socialdev.io/comments
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
  namespace: socialdev
  labels:
    app.kubernetes.io/name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 3000
      targetPort: 3000
