SocialDev/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
  namespace: socialdev
  labels:
    app.kubernetes.io/name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: ghcr.io/omer-bar/socialdev.io/posts
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
  namespace: socialdev
  labels:
    app.kubernetes.io/name: posts-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 3000
      targetPort: 3000
