SocialDev/k8s/profiles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-depl
  namespace: socialdev
  labels:
    app.kubernetes.io/name: profiles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          image: ghcr.io/eryx666/socialdev.io/profiles
---
apiVersion: v1
kind: Service
metadata:
  name: profiles-srv
  namespace: socialdev
  labels:
    app.kubernetes.io/name: profiles-srv
spec:
  selector:
    app: profiles
  ports:
    - name: profiles
      protocol: TCP
      port: 3000
      targetPort: 3000
